--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0",
         "vue-loader": "^17.3.1"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.4.0",
+        "mitt": "^3.0.1",
+        "pubsub-js": "^1.9.4",
         "vue": "^3.3.8",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.2.5",
+        "vue3-toastify": "^0.1.14"
     }
 }
