--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "tcg/voyager": "^1.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
