--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@vitejs/plugin-vue": "^4.4.0",
         "mitt": "^3.0.1",
         "pubsub-js": "^1.9.4",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.10.4",
         "vue": "^3.3.8",
         "vue-router": "^4.2.5",
         "vue3-toastify": "^0.1.14"
